Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55347

QtQuick Controls 2 ToolTip crashes when previous parent Item is destroyed before new ToolTip is displayed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.1
    • 5.7.0
    • Quick: Controls 2
    • None
    • Windows 10 x64. Qt 5.7.0 VS 2015 32-bit
    • 53c780f15c2d170514f74d949a8165033275bddd

    Description

      After displaying a ToolTip on an item in a view and removing that item from the view (and thereby removing the toolTip parent item), on displaying the ToolTip on another Item the application crashes.

      As a workaround, before removing the Item from the model (by listening on the remove button for example) I hide the shared ToolTip item and set its parent Item to something that will always exist.

      Attachments

        For Gerrit Dashboard: QTBUG-55347
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            rompelstompel Pieter Jordaan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes