src/quicktemplates2/qquickpopup_p_p.h
@@ -136,7 +136,6 @@ protected:
     void itemGeometryChanged(QQuickItem *, const QRectF &, const QRectF &) override;
     void itemParentChanged(QQuickItem *, QQuickItem *parent) override;
     void itemChildRemoved(QQuickItem *, QQuickItem *child) override;
-    void itemDestroyed(QQuickItem *item) override;
 
 private:
     void removeAncestorListeners(QQuickItem *item);
@@ -148,7 +147,7 @@ private:
     QQuickPopupPrivate *m_popup;
 };
 
-class QQuickPopupPrivate : public QObjectPrivate
+class QQuickPopupPrivate : public QObjectPrivate, public QQuickItemChangeListener
 {
     Q_DECLARE_PUBLIC(QQuickPopup)
 
@@ -177,6 +176,7 @@ public:
     void setBottomMargin(qreal value, bool reset = false);
 
     void setWindow(QQuickWindow *window);
+    void itemDestroyed(QQuickItem *item) override;
 
     bool focus;
     bool modal;
